[package]
name = "bpf-program-template"
version = "0.1.0"
edition = "2018"
license = "WTFPL"
publish = false

[features]
no-entrypoint = []

[dependencies]
solana-program = "1.7.4"
thiserror = "1.0.24"
spl-token = {version = "3.1.1", features = ["no-entrypoint"]}

[dev-dependencies]
assert_matches = "1.4.0"
solana-program-test = "1.7.4"
solana-sdk = "1.7.4"
solana-validator = "1.7.4"

[lib]
crate-type = ["cdylib", "lib"]
